--- a/DeviceSettings/res/values-fr/strings.xml
+++ b/DeviceSettings/res/values-fr/strings.xml
@@ -15,4 +15,27 @@
   ~  See the License for the specific language governing permissions and
   ~  limitations under the License.
   -->
-<resources/>
+<resources>
+  <string name="app_name">Paramètres de l\'appareil</string>
+  <string name="title_activity_device_settings">Paramètres de l\'appareil</string>
+  <string name="defaults_button">Réinitialiser</string>
+  <string name="title_haptic">Haptique</string>
+  <string name="vibrator_title">Vibreur</string>
+  <string name="vibrator_tuning_title">Intensité du vibreur</string>
+  <string name="vibrator_tuning_summary_head">Définir l\'intensité du vibreur</string>
+  <string name="title_touchscreen">Écran</string>
+  <string name="touchscreen_double_tap_gesture_title">Sortie de veille de l\'appareil</string>
+  <string name="touchscreen_double_tap_gesture_summary">Double appui pour sortir de veille l\'appareil</string>
+  <string name="touchscreen_camera_gesture_title">Appareil photo</string>
+  <string name="touchscreen_camera_gesture_summary">Dessinez un cercle pour activer l\'appareil photo</string>
+  <string name="touchscreen_music_gesture_title">Musique</string>
+  <string name="touchscreen_flashlight_gesture_title">Lampe de poche</string>
+  <string name="touchscreen_flashlight_gesture_summary">Dessinez un \"V\" pour activer/désactiver la lampe de poche</string>
+  <string name="touchscreen_music_gesture_summary">Utiliser les gestes pour le contrôle de la musique en lecture \n 
+• Deux doigts verticalement pour lecture/pause\n 
+• Dessiner une flèche vers la gauche pour la piste précédente\n 
+• Dessiner une flèche vers la droite pour la piste suivante</string>
+  <string name="title_other">Autre</string>
+  <string name="fast_charge_title">Charge rapide</string>
+  <string name="fast_charge_summary">Permet un chargement plus rapide de l\'appareil lorsqu\'il est sur l\'USB</string>
+</resources>
