--- a/DeviceSettings/res/values-zh-rCN/strings.xml
+++ b/DeviceSettings/res/values-zh-rCN/strings.xml
@@ -15,4 +15,24 @@
   ~  See the License for the specific language governing permissions and
   ~  limitations under the License.
   -->
-<resources/>
+<resources>
+  <string name="app_name">设备设置</string>
+  <string name="title_activity_device_settings">设备设置</string>
+  <string name="defaults_button">重置为默认设置</string>
+  <string name="title_haptic">触摸</string>
+  <string name="vibrator_title">振动</string>
+  <string name="vibrator_tuning_title">振动强度</string>
+  <string name="vibrator_tuning_summary_head">调整震动反馈强度</string>
+  <string name="title_touchscreen">触摸屏</string>
+  <string name="touchscreen_double_tap_gesture_title">唤醒设备</string>
+  <string name="touchscreen_double_tap_gesture_summary">双击唤醒设备</string>
+  <string name="touchscreen_camera_gesture_title">相机</string>
+  <string name="touchscreen_camera_gesture_summary">画一个圆圈以启动相机</string>
+  <string name="touchscreen_music_gesture_title">音乐</string>
+  <string name="touchscreen_flashlight_gesture_title">手电筒</string>
+  <string name="touchscreen_flashlight_gesture_summary">画 \'V\' 以启动手电筒</string>
+  <string name="touchscreen_music_gesture_summary">使用手势控制音乐播放 \n • 两个手指垂直滑动来播放或暂停\n • 向左划切换到上一首\n • 向右划切换到下一首</string>
+  <string name="title_other">其他</string>
+  <string name="fast_charge_title">快速充电</string>
+  <string name="fast_charge_summary">允许设备在 USB 接口快速充电</string>
+</resources>
